--- a/HTML/Headers/headers.html
+++ b/HTML/Headers/headers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Headers - HTML</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div id="wrapper">
@@ -18,10 +19,31 @@
         </div>
 
         <div>
-            Voor het aanmaken van een text-header, in het Nederlands een subkop of kop, kan je gebruik maken van een Header tag. Je kunt verschillende grootte koppen creëren. 
-            <h3 class="questions"></h3>
-            <p class="answers"></p>
+            <p>Voor het aanmaken van een text-header, in het Nederlands een subkop of kop, kan je gebruik maken van een Header tag. Je kunt verschillende grootte koppen creëren. </p>
+            <h3 class="questions">12. Onderzoek hoe je een text-header aanmaakt en reproduceer het volgende</h3>
+            <p class="answers">
+                Resultaat
+                <div>
+                    <h1> Headings opdrachten</h1>
+                    <h1> Heading 1</h1>
+                    <h2> Heading 2</h2>
+                    <h3> Heading 3</h3>
+                    <h4> Heading 4</h4>
+                    <h5> Heading 5</h5>
+                    <h6> Heading 6</h6>
+                </div>
+                <pre>
+                    &lt;h1&gt; Headings opdrachten&lt;/h1&gt;
+                    &lt;h1&gt; Heading 1&lt;/h1&gt;
+                    &lt;h2&gt; Heading 2&lt;/h2&gt;
+                    &lt;h3&gt; Heading 3&lt;/h3&gt;
+                    &lt;h4&gt; Heading 4&lt;/h4&gt;
+                    &lt;h5&gt; Heading 5&lt;/h5&gt;
+                    &lt;h6&gt; Heading 6&lt;/h6&gt;
+                </pre>
+            </p>
         </div>
+
         div>h3.questions+p.answers
         div>h3.questions+p.answers
         div>h3.questions+p.answers
