--- a/HTML/Paragrafen/paragrafen.html
+++ b/HTML/Paragrafen/paragrafen.html
@@ -3,47 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>titel</title>
+    <title>Paragrafen - HTML</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-   <!--Headings opdracht--> 
-    <header>
-        <h1>Headings opdrachten</h1>
-        <h1>Heading 1</h1>
-        <h2>Heading 2</h2>
-        <h3>Heading 3</h3>
-        <h4>Heading 4</h4>
-        <h5>Heading 5 </h5>
-        <h6>Heading 6</h6>
-    </header>
+    <div id="wrapper">
+        <div>
+            <h3 class="questions">13. Onderzoek wat een paragraaf tag is en hoe hij gebruikt wordt.  Geef hier een voorbeeld bij.</h3>
+            <p class="answers">
+                Het is een tag die aangeeft dat het om een paragraaf gaat. 
+                <br>
+                <span class="bold">Bv:</span> 
+                &lt;p&gt; dit is een paragraaf &lt;/p&gt;
+            </p>
+        </div>
 
-    <!--Headings opdracht--> 
-    <header>
-        <h1>Mijn eerste website</h1>
-        <h2>Miijn eerste sub kop1</h2>
-        <p> Paragraaf 1</p>
-        <h3>Mijn subkop 2</h3>
-        <p>Paragraaf 2</p>
-        <h4>End</h4>
-        <p>Paragraaf 3</p>
-    </header>
-    
-    <!-- Horzontal Line // Footer -->
-    <header>
-        <h1>Mijn eerste website</h1>
-        <h2>Miijn eerste sub kop1</h2>
-        <p> Paragraaf 1</p>
-        <h3>Mijn subkop 2</h3>
-        <p>Paragraaf 2</p>
-        <h4>End</h4>
-        <p>Paragraaf 3</p>
-        <hr>
-    </header>
-    <footer></div>
-    <h3> Footer </h3>
-    <p> Deze website is gebouwd vanuit de <a href="https://techgrounds.nl/">Techgrounds Academy</a>
-    
-    </footer>    
+        <div>
+            <h3 class="questions">14. Onderzoek en leg het verschil tussen het stoppen van alle tekst in één  paragraaf tag, en het opsplitsen van de tekst in meerdere tags uit.</h3>
+            <p class="answers">
+                Het is nodig om aan te geven dat de tekst uit meerdere alinea’s bestaat.
+            </p>
+        </div>
+        <div>
+            <h3 class="questions">15. Reproduceer het volgende resultaat door gebruik te maken van</h3>
+            <p class="answers">
+                <h1>Mijn eerste website</h1>
+                <h2>Miijn eerste sub kop1</h2>
+                <p> Paragraaf 1</p>
+                <h3>Mijn subkop 2</h3>
+                <p>Paragraaf 2</p>
+                <h4>End</h4>
+                <p>Paragraaf 3</p>
+                <hr>
+                <footer>
+                    <h3> Footer </h3>
+                    <p> Deze website is gebouwd vanuit de <a href="https://techgrounds.nl/">Techgrounds Academy</a>
+                </footer>
+            </p>
+        </div>
+    </div>        
 </body>
 </html>
 
