--- a/HTML/Intro/intro.html
+++ b/HTML/Intro/intro.html
@@ -26,7 +26,7 @@
             <h3 class="questions">3. Wat is een HTML tag en een HTML element? Hoe open je een HTML tag en hoe sluit je een HTML tag. Maak hiervoor voorbeelden en leg uit.</h3>
             <p class="answers">
                 Geeft begin en eind van een HTML pagina weer, dit wordt de HTML-element genoemd. <code><HTML> en </HTML></code> zijn de tags
-                <img src="./img/grumpy-cat-small.png" alt="element structuur weergave" height="100px">
+                <img src="../img/grumpy-cat-small.png" alt="element structuur weergave" height="100px">
             </p>
         </div>
         <div>
