Image, Audio & Video update

--- a/HTML/Image, audio & video/imageAudioVideo.html
+++ b/HTML/Image, audio & video/imageAudioVideo.html
@@ -7,9 +7,24 @@
 </head>
 <body>
     <div id="wrapper">
-        <p>
-            
-        </p>
+        <h1>Image, Audio & Video</h1>
+        <h3>Het plaatsen van foto's op een website is een belangrijke toevoeging voor velen. Zo
+            bestaan de meeste websites uit een grote collectie van foto's. Vaak kun je logo's,
+            teamfoto's of andere soorten afbeeldingen terugvinden op een website. Het stylen
+            van de afbeeldingen komt later in het onderdeel CSS aanbod. 
+        </h3>
+        <div>
+            <h3 class="questions">
+                1. Bij het inladen van een bestand is het noodzakelijk om de locatie van het
+                bestand aan te geven. Dit kan op 2 manieren:
+                ● Absolute path
+                ● Relative path
+                Wat houden deze 2 paths in?
+            </h3>
+            <p class="answers">
+
+            </p>
+        </div>
     </div>
 </body>
 </html>
