--- a/HTML/Lijsten/lijsten.html
+++ b/HTML/Lijsten/lijsten.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="wrapper">
+        <h1>Lijsten - HTML</h1>
         <div>
             <h3 class="questions">
                 11.Creëer nu voor elk onderdeel een header en een bijbehorende stuk tekst en
