--- a/HTML/Semantics/semantics.html
+++ b/HTML/Semantics/semantics.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semantics - HTML</title>
+    <title>Semantics - HTML (Week1)</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <header>
+        <div class="logo"><img src="../media/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></div>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="wrapper">
         <H1>Semantics - HTML</H1>
         <div>
@@ -35,8 +43,7 @@
                     <li>&lt;article&gt;  (Een losstaand stukje in een website/ widget/ nieuwsbericht, of een andere onafhankelijk)</li>
                 </ul>
             </p>
-        </div>
-        
+        </div>        
     </div>
 </body>
 </html>
