--- a/HTML/HTML Forms/html_forms.html
+++ b/HTML/HTML Forms/html_forms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Forms - HTML</title>
+    <title>HTML Forms - HTML (Week1)</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
