--- a/HTML/Headers/headers.html
+++ b/HTML/Headers/headers.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Headers - HTML</title>
+    <title>Headers - HTML (Week1)</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <header>
+        <div class="logo"><img src="../media/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></div>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="wrapper">
         <h1>Headers</h1>
         Het gebruik van headers is belangrijk voor zoekmachines en de gebruikers van je website. 
@@ -43,10 +51,6 @@
                 </pre>
             </p>
         </div>
-
-        div>h3.questions+p.answers
-        div>h3.questions+p.answers
-        div>h3.questions+p.answers
     </div>
 </body>
 </html>
