--- a/HTML/Image, audio & video/imageAudioVideo.html
+++ b/HTML/Image, audio & video/imageAudioVideo.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image, Audio & Video - HTML</title>
+    <title>Image, Audio & Video - HTML (Week1)</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div id="wrapper">
-        <h1>Image, Audio & Video</h1>
+        <h1>Image, Audio & Video - HTML (Week1)</h1>
         <h3>Het plaatsen van foto's op een website is een belangrijke toevoeging voor velen. Zo
             bestaan de meeste websites uit een grote collectie van foto's. Vaak kun je logo's,
             teamfoto's of andere soorten afbeeldingen terugvinden op een website. Het stylen
