--- a/HTML/Lijsten/lijsten.html
+++ b/HTML/Lijsten/lijsten.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lijsten - HTML</title>
+    <title>Lijsten - HTML (Week1)</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <header>
+        <div class="logo"><img src="../media/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></div>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="wrapper">
-        <h1>Lijsten - HTML</h1>
+        <h1>Lijsten - HTML (Week1)</h1>
         <div>
             <h3 class="questions">
                 11.Creëer nu voor elk onderdeel een header en een bijbehorende stuk tekst en
