--- a/HTML/Paragrafen/paragrafen.html
+++ b/HTML/Paragrafen/paragrafen.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paragrafen - HTML</title>
+    <title>Paragrafen - HTML (Week1)</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <header>
+        <div class="logo"><img src="../media/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></div>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="wrapper">
+        <h1>Paragrafen - HTML (Week1)</h1>
         <div>
             <h3 class="questions">13. Onderzoek wat een paragraaf tag is en hoe hij gebruikt wordt.  Geef hier een voorbeeld bij.</h3>
             <p class="answers">
@@ -20,26 +29,23 @@
 
         <div>
             <h3 class="questions">14. Onderzoek en leg het verschil tussen het stoppen van alle tekst in één  paragraaf tag, en het opsplitsen van de tekst in meerdere tags uit.</h3>
+            <img src="../media/paragraaf.png" alt="paragraaf">
             <p class="answers">
                 Het is nodig om aan te geven dat de tekst uit meerdere alinea’s bestaat.
             </p>
         </div>
+
         <div>
             <h3 class="questions">15. Reproduceer het volgende resultaat door gebruik te maken van</h3>
-            <p class="answers">
+            <div class="answers">
                 <h1>Mijn eerste website</h1>
                 <h2>Miijn eerste sub kop1</h2>
                 <p> Paragraaf 1</p>
-                <h3>Mijn subkop 2</h3>
+                <h2>Mijn subkop 2</h2>
                 <p>Paragraaf 2</p>
                 <h4>End</h4>
                 <p>Paragraaf 3</p>
-                <hr>
-                <footer>
-                    <h3> Footer </h3>
-                    <p> Deze website is gebouwd vanuit de <a href="https://techgrounds.nl/">Techgrounds Academy</a>
-                </footer>
-            </p>
+            </div>
         </div>
     </div>        
 </body>
