--- a/HTML/Tables/tables.html
+++ b/HTML/Tables/tables.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tables - HTML</title>
+    <title>Tables - HTML (Week1)</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <header>
+        <div class="logo"><img src="../media/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></div>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="wrapper">
-        <h1>Tables</h1>
+        <h1>Tables - HTML (Week1)</h1>
         
         <!-- Vraag 10 -->
         <div class="questions">
