Index creations & updates

--- a/index.html
+++ b/index.html
@@ -3,13 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Web Development Course - Techgrounds - U. Kirindongo</title>
+    <link rel="stylesheet" href="./resources/css/main.css">
 </head>
 <body>
     <div id="wrapper">
+        <header>
+            <div class="logo"></div>
+            <nav>
+                               
+            </nav>
+        </header>
         <main>
+            <div class="jumbotron">
+                <h1>Web Development Course - Techgrounds - U. Kirindongo</h1>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam, nihil! Recusandae maiores explicabo, suscipit eos natus laboriosam, ipsum, aspernatur possimus animi consectetur totam id dolore earum architecto reprehenderit obcaecati expedita.
+                </p>
+            </div>
             
+            <ul>
+                <li><a href="./HTML/index.html"><img class="badge" src="./resources/HTML5_logo_and_wordmark.svg" alt="HTML 5 Logo"></a></li>
+                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href=""><img src="" alt=""></a></li>
+            </ul> 
         </main>
+        <footer>
+            <p>Web Development Course - Techgrounds - U. Kirindongo</p>
+        </footer>
     </div>
 </body>
 </html>
