--- a/HTML/Lijsten/lijsten.html
+++ b/HTML/Lijsten/lijsten.html
@@ -7,19 +7,27 @@
     <!-- <link rel="stylesheet" href="../css/style.css">     -->
     <style>
         .questions{
-    font-weight: bold;
-    margin-top: 30px;
-}
+            font-weight: bold;
+            margin-top: 30px;
+        }
 
-.answers{
-    margin-top: 5px;
-    font-style: italic;
-}
+        .answers{
+            margin-top: 5px;
+            font-style: italic;
+        }
+
+        .logo img{
+            width: 150px;
+        }
+
+        nav ul li{
+            list-style-type: none;
+        }
     </style>
 </head>
 <body>
     <header>
-        <div class="logo"><img src="../media/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></div>
+        <div class="logo"><img src="../../resources/img/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></div>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
