--- a/HTML/Tables/tables.html
+++ b/HTML/Tables/tables.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img src="../media/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></div>
+        <div class="logo"><img src="../../resources/img/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></div>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -19,72 +19,188 @@
         <h1>Tables - HTML (Week1)</h1>
         
         <!-- Vraag 10 -->
-        <div class="questions">
-            10.Om een tabel te maken heb je volgende elementen nodig:
-            <ul>
-                <li>&lt;table&gt;</li>
-                <li>&lt;thead&gt;</li>
-                <li>&lt;tbody&gt;</li>
-                <li>&lt;tfoot&gt;</li>
-                <li>&lt;th&gt;</li>
-                <li>&lt;tr&gt;</li>
-                <li>&lt;td&gt;</li>
-            </ul>
-            <a title="Uitleg table tag" href="https://www.w3schools.com/tags/tag_table.asp">W3Schools Table Tag</a>
-        </div>
-        <div class="answers">
-            <dl>
-                <dt>&lt;table&gt;&lt;/table&gt;</dt>
-                <dd>De tabel tag: HTML tabel. Tabel element met één of meer tr, th, td elements.</dd>
-                <dt>&lt;thead&gt;&lt;/thead&gt;</dt>
-                <dd>De thead tag: groepering van headings, bijvoorbeeld Maand, Salaris.</dd>
-                <dt>&lt;tbody&gt;&lt;/tbody&gt;</dt>
-                <dd>De tbody tag: groepering van body content in HTML tabel, bijvoorbeeld Januari, $100.</dd>
-                <dt>&lt;th&gt;&lt;/th&gt;</dt>
-                <dd>De th tag: 'header cell', bevat heading informatie, bijvoorbeeld Maand.</dd>
-                <dt>&lt;tr&gt;&lt;/tr&gt;</dt>
-                <dd>De tr tag: Rij in HTML table.</dd>
-                <dt>&lt;td&gt;&lt;/td&gt;</dt>
-                <dd>De td tag: standaard cell, bijvoorbeeld Januari</dd>
-            </dl>
-        </div>
-        <!-- Vraag 11 -->
-        <div class="questions">
-            11.Maak een tabel met &lt;table&gt; element. Zie hieronder: 
-        </div>
-        <div class="answers">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Voornaam</th>
-                        <th>Achternaam</th>
-                        <th>Leeftijd</th>
-                        <th>Telefoonnr</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>41</td>
-                        <td>+31 12345678</td>
-                    </tr>
-                    <tr>
-                        <td>Steven</td>
-                        <td>Smith</td>
-                        <td>32</td>
-                        <td>+31 12345678</td>
-                    </tr>
-                    <tr>
-                        <td>Alexander</td>
-                        <td>Beave</td>
-                        <td>16</td>
-                        <td>+31 12345678</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div>
+            <div class="questions">
+                10.Om een tabel te maken heb je volgende elementen nodig:
+                <ul>
+                    <li>&lt;table&gt;</li>
+                    <li>&lt;thead&gt;</li>
+                    <li>&lt;tbody&gt;</li>
+                    <li>&lt;tfoot&gt;</li>
+                    <li>&lt;th&gt;</li>
+                    <li>&lt;tr&gt;</li>
+                    <li>&lt;td&gt;</li>
+                </ul>
+                <a title="Uitleg table tag" href="https://www.w3schools.com/tags/tag_table.asp">W3Schools Table Tag</a>
+            </div>
+            <div class="answers">
+                <dl>
+                    <dt>&lt;table&gt;&lt;/table&gt;</dt>
+                    <dd>De tabel tag: HTML tabel. Tabel element met één of meer tr, th, td elements.</dd>
+                    <dt>&lt;thead&gt;&lt;/thead&gt;</dt>
+                    <dd>De thead tag: groepering van headings, bijvoorbeeld Maand, Salaris.</dd>
+                    <dt>&lt;tbody&gt;&lt;/tbody&gt;</dt>
+                    <dd>De tbody tag: groepering van body content in HTML tabel, bijvoorbeeld Januari, $100.</dd>
+                    <dt>&lt;th&gt;&lt;/th&gt;</dt>
+                    <dd>De th tag: 'header cell', bevat heading informatie, bijvoorbeeld Maand.</dd>
+                    <dt>&lt;tr&gt;&lt;/tr&gt;</dt>
+                    <dd>De tr tag: Rij in HTML table.</dd>
+                    <dt>&lt;td&gt;&lt;/td&gt;</dt>
+                    <dd>De td tag: standaard cell, bijvoorbeeld Januari</dd>
+                </dl>
+            </div>
         </div>
 
+        <!-- Vraag 11 -->
+        <div>
+            <h3 class="questions">
+                11.Maak een tabel met &lt;table&gt; element. Zie hieronder: 
+            </h3>
+            <div class="answers">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Voornaam</th>
+                            <th>Achternaam</th>
+                            <th>Leeftijd</th>
+                            <th>Telefoonnr</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>41</td>
+                            <td>+31 12345678</td>
+                        </tr>
+                        <tr>
+                            <td>Steven</td>
+                            <td>Smith</td>
+                            <td>32</td>
+                            <td>+31 12345678</td>
+                        </tr>
+                        <tr>
+                            <td>Alexander</td>
+                            <td>Beave</td>
+                            <td>16</td>
+                            <td>+31 12345678</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Vraag 12 -->
+        <div>
+            <h3 class="questions">
+                12. Maak een agenda tabel met <table> element. Zie hieronder:
+                <img class="bigger" src="../media/tables_opdr12_example.png" alt="Tables opdracht 12 figuur">
+            </h3>
+            <div class="answers">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>MA</th>
+                            <th>DI</th>
+                            <th>WO</th>
+                            <th>DO</th>
+                            <th>VR</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Afspraak met tandarts</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Sporten</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Huiswerk maken</td>
+                            <td>Werken</td>
+                            <td>Werken</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Afspraak met tandarts</td>
+                            <td></td>
+                            <td></td>
+                            <td>Werken</td>
+                            <td>Bij vrienden</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Vraag 13 -->
+        <div>
+            <h3 class="questions">13. Voor het maken van een tabel kan je ook gebruik maken van colspan en
+                rowspan attributen. Zoek uit wat colspan en rowspan attribuut doet en meet
+                het volgende:
+            </h3>
+            <div class="answers">
+                <table>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Sport</th>
+                            <th>Aantal recreanten</th>
+                            <th>Aantal competitie spelers</th>
+                            <th>Totale deelnemers</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td>Badminton</td>
+                            <td>10</td>
+                            <td>30</td>
+                            <td>40</td>
+                        </tr>
+                        <tr>
+                            <td>Racket sport</td>
+                            <td>Tafeltennis</td>
+                            <td>59</td>
+                            <td>30</td>
+                            <td>89</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Tennis</td>
+                            <td>159</td>
+                            <td>130</td>
+                            <td>189</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Voetbal</td>
+                            <td>88</td>
+                            <td>40</td>
+                            <td>128</td>
+                        </tr>
+                        <tr>
+                            <td>Ball sport</td>
+                            <td>Basketbal</td>
+                            <td>60</td>
+                            <td>40</td>
+                            <td>100</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Volleybal</td>
+                            <td>35</td>
+                            <td>20</td>
+                            <td>55</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Vraag 14 -->
+        div>
     </div>
 </body>
 </html>
