--- a/HTML/Tables/tables.html
+++ b/HTML/Tables/tables.html
@@ -12,6 +12,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
+                <!-- TODO: Navigatie Tables -->
             </ul>
         </nav>
     </header>
@@ -174,6 +175,13 @@
                             <td>189</td>
                         </tr>
                         <tr>
+                            <td>Tennis</td>
+                            <td>159</td>
+                            <td>130</td>
+                            <td>189</td>
+                            <td></td>
+                        </tr>
+                        <tr>
                             <td></td>
                             <td>Voetbal</td>
                             <td>88</td>
@@ -200,7 +208,37 @@
         </div>
 
         <!-- Vraag 14 -->
-        div>
+        <div>
+            <h3 class="questions">14.Maak nu zelf een tabel met de elementen die je hiervoor hebt geleerd.</h3>
+            <div class="answers">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Van</th>
+                            <th>Naar</th>
+                            <th>Hoeveel dagen</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Cura&ccedil;ao</td>
+                            <td>Nederland</td>
+                            <td>20</td>
+                        </tr>
+                        <tr>
+                            <td>Nederland</td>
+                            <td>Cura&ccedil;ao</td>
+                            <td>12</td>
+                        </tr>
+                        <tr>
+                            <td>Cura&ccedil;ao</td>
+                            <td>Miami</td>
+                            <td>14</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </body>
 </html>
