CSS - EOC Update

--- a/CSS/Selectors & Visual rules/selector.html
+++ b/CSS/Selectors & Visual rules/selector.html
@@ -85,38 +85,44 @@
                 </div>
             </div>
         </div>
+
+        <!-- Opdracht 5 -->
         <div>
             <div class="assignments">
                 <h3>Opdracht 5 Maak een aparte html bestand en voeg de volgende code toe:</h3>
                 <figure>
                     <img src="../res/img/ond1_opdr5_fig.png" alt="Onderdeel 1 opdracht 5 fig">
-                    <pre>
-                        <ul>
-                            <li>r</li>
-                            <li>e</li>
-                        </ul>
-                        <div>
-                            <p><a href="./opdr5.html">Foffy</a></p>
-                        </div>
-                    </pre>
                 </figure>
             </div>
             <div class="results">
                 <a href="./opdr5.html">Opdracht 5</a>
             </div>
         </div>
+
+        <!-- Opdracht 6 -->
         <div>
             <div class="assignments">
-                <h3></h3>
+                <h3>Opdracht 6 Verder heb je ook nog de volgende selectors: ●child selectors ●adjacent selectors ●general selectors Maak in een aparte html bestand voor elke selector een voorbeeld en maak een link in je antwoord naar dat html bestand. 
+                    Geef in je antwoord ook aan wat de voordelen zijn van elk selector. </h3>
             </div>
-            <div class="results"></div>
+            <div class="results">
+                <a href="./opdr6.html">Opdracht 6: Selectors (Child, Adjacent, General)</a>
+            </div>
         </div>
+
+        <!-- Opdracht 7 -->
         <div>
             <div class="assignments">
-                <h3></h3>
+                <h3>
+                    Opdracht 7 Maak nu een html bestand aan met voorbeelden van alle soorten selectors erin. Maak een link in je antwoord die naar dat html bestand verwijst. 5
+                </h3>
             </div>
-            <div class="results"></div>
+            <div class="results">
+                <a href="./opdr7.html">Opdracht 7: Soorten selectors</a>
+            </div>
         </div>
+
+        <!-- Opdracht 8 -->
         <div>
             <div class="assignments">
                 <h3></h3>
