--- a/CSS/Selectors & Visual rules/opdr5.html
+++ b/CSS/Selectors & Visual rules/opdr5.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Opdracht 5</title>
     <style>
         main{
-            margin: 0;
-            padding: 0;
-        }        
+            color: black;
+        }
+
+        :nth-child(2){
+            color: green;
+        }
+
     </style>
 </head>
 <body>
@@ -16,7 +20,6 @@
         <h2>Class selectors</h2>
         <p>paragraph tekst</p>
         <p>paragraph tekst 2</p>
-    </main>
-    
+    </main>    
 </body>
 </html>
