--- a/CSS/Selectors & Visual rules/basic.html
+++ b/CSS/Selectors & Visual rules/basic.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Selectors</title>
+    <style>
+        #gusto{
+            background-color: violet;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Basic Selectors</h1>
+    <div id="wrapper">
+        <main>
+            <h2>P-element met de id "gusto" krijgt achtergrondkleur violet</h2>
+            <div class="matrix">
+                <p id="gusto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto, sed?</p>
+                <ul>
+                    <li id="id1">Aap</li>
+                    <li id="id2">Appel</li>
+                    <li id="id3">Pizza</li>
+                    <li id="id4">Hot Dog</li>
+                    <li id="id5">Friet</li>
+                </ul>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
