--- a/CSS/Selectors & Visual rules/combi.html
+++ b/CSS/Selectors & Visual rules/combi.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Combinators Selector</title>
+    <style>
+        div ul{
+            background-color: blueviolet;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Combinators Selectors</h1>
+    <div id="wrapper">
+        <main>
+            <div>
+                <h2>Het ul-element die binnen een div zit krijgt achtergrondkleur van blueviolet</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, cupiditate.</p>
+                <ul>
+                    <li>a</li>
+                    <li>b</li>
+                    <li>c</li>
+                </ul>
+            </div>
+            
+        </main>
+    </div>   
+    <ul>
+        <li>Wordt</li>
+        <li>Nou</li>
+        <li>Wakker</li>
+    </ul> 
 </body>
 </html>
