--- a/CSS/Selectors & Visual rules/opdr7.html
+++ b/CSS/Selectors & Visual rules/opdr7.html
@@ -8,10 +8,10 @@
 <body>
     <main>
         <ul>
-            <li><a href="basic.html">Basic Selector</a></li>
-            <li><a href="combi.html">Combinator Selector</a></li>
-            <li><a href="pseudo_selector.html">Pseudo Selector</a></li>
-            <li><a href="pseudo_element.html">Pseudo Elements</a></li>
+            <li><a href="basic.html" target="_blank">Basic Selector</a></li>
+            <li><a href="combi.html" target="_blank">Combinator Selector</a></li>
+            <li><a href="pseudo_selector.html" target="_blank">Pseudo Selector</a></li>
+            <li><a href="pseudo_element.html" target="_blank">Pseudo Elements Selector</a></li>
         </ul>
     </main>
 </body>
