--- a/CSS/Selectors & Visual rules/pseudo_selector.html
+++ b/CSS/Selectors & Visual rules/pseudo_selector.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pseudo Selectors | CSS</title>
+    <style>
+        li:hover{
+        background-color: tomato;
+    }
+    </style>
 </head>
 <body>
-    
+    <h1>Pseudo Selector - HTML</h1>
+    <div id="wrapper">
+        <h2>Wanneer je met je muis over de lijst elementen gaat worden ze rood van kleur</h2>
+        <div>
+            <p>Lorem ipsum dolor sit.</p>
+            <ul>
+                <li>2</li>
+                <li>4</li>
+                <li>6</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
