--- a/CSS/Selectors & Visual rules/selector.html
+++ b/CSS/Selectors & Visual rules/selector.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selectors & Visual rules - CSS (Week 2)</title>
     <link rel="stylesheet" href="../res/css/style.css">
+    <style>
+        .assignments{
+            background-color: pink;
+            margin-top: 120px;
+        }
+    </style>
 </head>
 <body>
     <div id="wrapper">
@@ -110,7 +116,7 @@
             </div>
         </div>
 
-        <!-- Opdracht 7 -->
+        <!-- Opdracht 7 TODO: not done-->
         <div>
             <div class="assignments">
                 <h3>
@@ -125,9 +131,24 @@
         <!-- Opdracht 8 -->
         <div>
             <div class="assignments">
-                <h3></h3>
+                <h3>
+                    Opdracht 8 Styling die je toepast wordt toegepast in een bepaalde volgorde. 
+                    Het kan voorkomen dat je styling toepast en vervolgens niet het gewenste resultaat ziet. 
+                    Cascade en Inheritance zijn belangrijke concepten om te begrijpen hoe styling werkt. 
+                    Lees hier in de officiële documentatie meer over cascade en inheritance. 
+                    Zoek ook andere referenties om het concept te begrijpen. 
+                    <span class="italic">Leg in eigen woorden uit wat met cascade en inheritance wordt bedoeld. 
+                    Maak voorbeelden om je antwoord uit te leggen.</span> 
+                    Meer weten? Je kunt meer informatie vinden over deze concepten in deze video 
+                </h3>
             </div>
-            <div class="results"></div>
+            <div class="results">
+                <h4>Cascade</h4>
+                <p>De manier om te zien wie er &quot;voorrang&quot; heeft bij het uitvoeren van styling op een element. Daarbij is het specificy van uiterst belang. Op die manier heeft een ID voorrang op een CLASS en een CLASS voorrang op een ELEMENT. </p>
+
+                <h4>Inheritance</h4>
+                <p>Dit geeft aan dat een element styling overerft van zijn parent element als hij geen eigen style heeft. Denk aan de achtergrond kleur aanpassen van</p>
+            </div>
         </div>
     </div>
 </body>
