--- a/CSS/box_model/box_model.html
+++ b/CSS/box_model/box_model.html
@@ -19,10 +19,6 @@
         p>span{
             background-color: white;
         }
-
-        p:first-child{
-            margin-bottom: 15px;
-        }
         
     </style>
 </head>
@@ -53,7 +49,7 @@
                     </figure>
                 </div>
                 <div id="opdr2" class="results">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    <p style="margin-bottom: 15px;">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                     <p>Lorem <span>ipsum</span> dolor <span>sit</span> amet.</p>
                 </div>
             </div>
@@ -73,10 +69,19 @@
             <!-- Opdracht 4 -->
             <div>
                 <div class="assignments">
-                    <h3></h3>
+                    <h3>Opdracht 4</h3>
+                    <h4>Hieronder zie je een box-model
+                        Leg uit wat de volgende termen betekenen: content, padding, margin en border. 
+                    </h4>
+                    <figure>
+                        <img src="../res/img/ond2_opdr4_fig.png" alt="Box model fig">
+                    </figure>
                 </div>
                 <div class="results">
-                    <p></p>                
+                    <p><span class="bold">Content: </span>Dit is wat er wordt vertoond op de scherm.</p>
+                    <p><span class="bold">Padding: </span>Dat is de opvulling van het element, dus de spatie binnen het element</p>
+                    <p><span class="bold">Margin: </span>Dit is de ruimte aan de buitenkant vanuit het element</p>
+                    <p><span class="bold">Border: </span> Dit is het rand van het element</p>
                 </div>
             </div>
 
