--- a/CSS/pseudo_elements/pseudo.html
+++ b/CSS/pseudo_elements/pseudo.html
@@ -115,7 +115,6 @@
             width: 30em;
             top: 0;
             left: 5em;
-            /* z-index: -2; */
             position: absolute;
         }
 
@@ -164,11 +163,11 @@
             color: white;
         }
 
-        #opdr6 .bell::before::content{
+        /* #opdr6 .bell::before::content{
             position: absolute;
             top: 3em;
             left: 3em;
-        }
+        } */
 
         /* Right cup */
         #opdr6 .bell::after{
